# evalplus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  FuzzEval.jsonl  HumanEvalPlus.jsonl  HumanEvalPlusInputs.jsonl  HumanEvalPlusInputsType.jsonl  LICENSE  MbppBase.jsonl  MbppPlus.jsonl  README.md  README_GAUDI.md  basic_one_card.sh  basic_two_card.sh  chatgpt_temp_0.0.jsonl  cot_one_card.sh  custom_finetuned_models  custom_saved_models  evo.sh  instruct_one_card.sh  instruct_two_card.sh  release.sh  requirements-evalperf.txt  requirements-gaudi.txt  requirements-llm.txt  requirements-tools.txt  requirements-tsr.txt  requirements.txt  run_70b_all.sh  run_small_all.sh  sanitize.sh  setup.cfg  trained_models  zipper.sh
codegen/: generate.py  model.py
docs/: cli.md  evalperf.md  execution.md  humanevalplus.csv  leaderboard.html  ollama.md
eval_plus/: cov.py  utils.py
evalplus/: codegen.py  config.py  evalperf.py  evaluate.py  inputgen.py  lecacy_sanitize.py  sanitize.py  syncheck.py  utils.py
fuzz_eval/: utils.py
generation/: code_sanitize.py  generate.py  generate.sh  model.py
groundtruth/: 000_has_close_elements.py  001_separate_paren_groups.py  002_truncate_number.py  003_below_zero.py  004_mean_absolute_deviation.py  005_intersperse.py  006_parse_nested_parens.py  007_filter_by_substring.py  008_sum_product.py  009_rolling_max.py  010_make_palindrome.py  011_string_xor.py  012_longest.py  013_greatest_common_divisor.py  014_all_prefixes.py  015_string_sequence.py  016_count_distinct_characters.py  017_parse_music.py  (+147 more)
(+768 files in other folders)
